--- a/11_Functions.ipynb
+++ b/11_Functions.ipynb
@@ -119,7 +119,7 @@
         "\n",
         "print(get_password())"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -190,7 +190,7 @@
         "\n",
         "print(get_username())"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -267,7 +267,7 @@
         "  message = \"Credentials Accepted\"\n",
         "  print(message)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,7 +328,7 @@
         "\n",
         "print(rounded_float)"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -394,7 +394,7 @@
         "elif round_number == \"N\":\n",
         "  print(number)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -448,11 +448,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "c5ufi-U-VBB5"
+        "id": "c5ufi-U-VBB5",
+        "outputId": "98c119de-5f60-44c2-919e-4eab9ce36e00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "source": [],
-      "execution_count": 34,
-      "outputs": []
+      "source": [
+        "from random import uniform, randint\n",
+        "\n",
+        "def random_decimal_number():\n",
+        "  number = uniform(1,10)\n",
+        "  return(number)\n",
+        "print(number)\n",
+        "\n",
+        "def random_integer_number():\n",
+        "  places = randint(1,4)\n",
+        "  return(places)\n",
+        "print(places)\n",
+        "\n",
+        "def generate_rounded_float():\n",
+        "  print(round(number, places))\n",
+        "\n",
+        "print(round(number, places))\n",
+        "\n"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.392363182647333\n",
+            "2\n",
+            "8.39\n"
+          ]
+        }
+      ]
     }
   ]
 }
